# Retainly

./: .gitignore  Cargo.toml  README.md  notes.txt
client/: Cargo.toml
client/src/: crud.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml  cards.db
server/src/: crud.rs  db.rs  logic.rs  main.rs  sql.rs
src/: commands.py  database.py  db_operations.py  main.py  models.py  spaced_repetition.db
