[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = {version = "1.0.196", features = ["derive"]}
common = {path = "../common"}
rusqlite = "0.30.0"
anyhow = "1.0.79"

